test/files/neg/t10678.check
t10678.scala:6: warning: Using `<:` for `extends` is deprecated
trait U <: T
        ^
t10678.scala:8: error: ';' expected but '<:' found.
class C <: T {
        ^
t10678.scala:11: error: ';' expected but '<:' found.
object O <: T {
         ^
1 warning
2 errors
